Update javac to --release 14