@@ -1,8 +1,17 @@
-
 CLASSES=.:`ls /cucumber/*.jar | tr '\n' ':'`
-javac -Xlint:unchecked -cp $CLASSES  *.java
+
+javac \
+  --class-path $CLASSES  \
+  --enable-preview \
+  --release 14 \
+  -Xlint:unchecked \
+    *.java
+
 if [ $? -eq 0 ]; then
   # run test classes even if they are inner classes
-  java -cp $CLASSES org.junit.runner.JUnitCore \
+  java \
+    --class-path $CLASSES \
+    --enable-preview \
+    org.junit.runner.JUnitCore \
     `ls -1 *Test*.class | grep -v '\\$' | sed 's/\(.*\)\..*/\1/'`
 fi
